--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,84 @@
         body {
             margin: 0;
             padding: 0;
+        }
+        #loader {
+            background-color: #002a3e;
+            background-image: url('/resources/ui/background.png');
+            background-size: cover;
+            background-position: center;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #splashScreen {
+            --progress : 2%;
+            background-image: url('/resources/ui/splashScreen.png');
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+            width: 420px;
+            height: 189px;
+            position: relative;
             overflow: hidden;
+            color: #fff;
+            display: flex;
+            padding: 2px 4px;
+            box-sizing: border-box;
+            align-items: end;
+            font-family: sans-serif;
+            font-size: 12px;
+        }
+        #splashScreen::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: var(--progress);
+            height: 100%;
+            background-color: rgb(61, 61, 61);
+            z-index: -1;
+        }
+        #splashScreen::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color:  rgb(22, 22, 22);
+            z-index: -2;
         }
     </style>
 </head>
 <body>
     <div id="main"></div>
+    <div id="loader">
+        <div id="splashScreen">Ładowanie...</div>
+    </div>
+    <script>
+        {
+            let loader = document.getElementById('loader');
+            let splashScreen = document.getElementById('splashScreen');
+
+            window.setProgressBar = (msg, value) => {
+                if(splashScreen) {
+                    splashScreen.innerText = msg;
+                    splashScreen.style.setProperty('--progress', `${value}%`);
+                }
+            }
+
+            window.disposeProgressBar = () => {
+                loader.remove();
+                loader = null;
+                splashScreen = null;
+            }
+        }
+    </script>
 </body>
 </html>
