--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
         body {
             margin: 0;
             padding: 0;
+            overflow: hidden;
+            touch-action : none;
+            -ms-touch-action : none;
         }
         #loader {
             background-color: #002a3e;
