--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@
             color: #fff;
             background-color: rgba(0, 0, 0, 0.5);
             font-family: sans-serif;
+            opacity: 0;
+            transition: opacity 0.5s;
         }
     </style>
 </head>
