avoid unnecessary CSS recalculation

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,7 @@
             z-index: -2;
         }
         .label {
+            display: block !important;
             padding: 4px 6px;
             border-radius: 2px;
             font-size: 16px;
