--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,16 @@
             font-family: "Atma", system-ui;
             font-weight: 400;
             font-style: normal;
+            background: #000;
+        }
+        .fade {
+            transition: linear opacity 1s;
+        }
+        .fade-in {
+            opacity: 1;
+        }
+        .fade-out {
+            opacity: 0;
         }
         #menu {
             background-color: #002a3e;
@@ -36,7 +46,6 @@
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-
         }
         #menu button {
             margin: 0 auto;
