--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
             font-style: normal;
             background: #000;
         }
+        .cursor-none * {
+            cursor: none !important;
+        }
         .fade {
             transition: linear opacity 1s;
         }
@@ -70,9 +73,8 @@
             font-size: 4.7916vw;
             font-weight: 600;
             padding: 0;
-            margin: -10px;
-            padding: 10px;
             text-shadow: 1px 1px 2px #000;
+            line-height: 1;
         }
         #menu button:focus {
             outline: none;
