--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,12 @@
             font-family: sans-serif;
             font-size: 12px;
         }
+        body.run-in-electron #splashScreen {
+            background-repeat: repeat;
+            width: 424px;
+            height: 194px;
+            background-size: 420px 189px;
+        }
         #splashScreen::after {
             content: '';
             position: absolute;
@@ -181,7 +187,7 @@
 
         }
         @media (max-width: 480px) {
-            #splashScreen {
+            body:not(.run-in-electron) #splashScreen {
                 font-size: 10px;
                 width: 260px;
                 height: 117px;
@@ -275,6 +281,11 @@
                                     Autorzy
                                 </button>
                             </div>
+                            <div>
+                                <button class="exit-button">
+                                    Wyjście
+                                </button>
+                            </div>
                          </div>
                     </div>`;
 
@@ -282,7 +293,8 @@
                         playButton : loader.querySelector('.play-button'),
                         playFormSavedStateButton : loader.querySelector('.play-form-saved-state-button'),
                         showControlsButton : loader.querySelector('.show-controls-button'),
-                        authorsButton : loader.querySelector('.authors-button')
+                        authorsButton : loader.querySelector('.authors-button'),
+                        exitButton : loader.querySelector('.exit-button')
 
                     };
                 }
